--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1150,3 +1150,43 @@ DOI: 10.1007/11840541_68},
   url = {https://ieeexplore.ieee.org/document/10589638/},
   urldate = {2025-04-27}
 }
+@article{nikolaievComparativeReviewDrone2024,
+  title = {Comparative {{Review}} of {{Drone Simulators}}},
+  author = {Nikolaiev, Mykola and Novotarskyi, Mykhailo},
+  date = {2024-10-02},
+  journaltitle = {Information, Computing and Intelligent systems},
+  shortjournal = {Inf. Comput. and Intell. syst. j.},
+  number = {4},
+  pages = {79--98},
+  issn = {2786-8729, 2708-4930},
+  doi = {10.20535/2786-8729.4.2024.300614},
+  url = {https://itvisnyk.kpi.ua/article/view/300614},
+  urldate = {2025-04-27},
+  abstract = {The rapid development of Unmanned Aerial Vehicles (UAVs), particularly drones, has revolutionized various sectors, including agriculture, mapping, search and rescue operations and more. There is an urgent need for simulation environments to develop algorithms for complex trajectory evolutions in tasks like package delivery and environmental monitoring, to avoid the significant risks associated with real-world testing. One of the primary challenges in UAV research is the diversity and fragmentation of available simulation tools, complicating the selection of appropriate simulators for specific practical tasks. Researchers must balance trade-offs such as simulation speed, the accuracy of physical law emulation, sensor integration, and user interface quality. The absence of a universal simulator that includes high-fidelity physics, comprehensive sensor modeling, and scalability for drone swarm simulations is a significant issue. Known UAV simulators have certain advantages and disadvantages, but none provide a comprehensive solution to meet all the requirements for modern research and development. Integrating various sensors, such as cameras, LiDAR, GPS, and IMUs, into simulation systems remains a technical challenge, limiting the applicability of existing simulators. Additionally, the availability and support infrastructure for effective simulators can vary significantly, impacting their adoption and sustainability. Therefore, the main problem is the lack of a universal simulator that meets the diverse and specific needs of UAV research and development. A standardized approach to UAV simulation could improve the comparability of research results, simplify selection efforts, and create a unified basis for evaluating simulator performance. Advances in aerodynamic modeling, especially for quadcopters and fixed-wing UAVs, could enhance simulation accuracy and realism, better supporting the development of advanced technologies. Future research aims to develop more comprehensive, high-fidelity, and scalable simulation environments. This involves integrating innovative sensor modeling approaches, improving swarm dynamics modeling, and enhancing user accessibility and support. Key areas for improvement include sensor integration to model a wide range of sensors, improving swarm dynamics simulation to effectively model complex behaviors and interactions among multiple drones, simplifying user interfaces, providing comprehensive documentation, ensuring robust community support, developing standardized criteria for comparing and evaluating different simulators, and incorporating detailed aerodynamic principles to enhance simulation accuracy. Addressing these issues in the development of UAV simulators is crucial for advancing aerial robotics. Developing simulation environments with integrated advanced sensor capabilities, improved swarm dynamics modeling, and user-friendly interfaces can enhance the effectiveness and efficiency of UAV development. Standardized evaluation criteria and detailed aerodynamic modeling will support the evolution of UAV technologies, ensuring safer, more reliable, and innovative applications across various sectors. These enhancements will foster innovation, technological progress, and operational efficiency in real-world conditions.}
+}
+@book{hammingArtProbabilityScientists1991,
+  title = {The Art of Probability for Scientists and Engineers},
+  author = {Hamming, Richard Wesley},
+  date = {1991},
+  publisher = {Addison-Wesley},
+  location = {Redwood City (Calif.)},
+  isbn = {978-0-201-51058-4},
+  langid = {english}
+}
+@inproceedings{atapour-abarghoueiRealTimeMonocularDepth2018,
+  title = {Real-{{Time Monocular Depth Estimation Using Synthetic Data}} with {{Domain Adaptation}} via {{Image Style Transfer}}},
+  booktitle = {2018 {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
+  author = {Atapour-Abarghouei, Amir and Breckon, Toby P.},
+  date = {2018-06},
+  pages = {2800--2810},
+  publisher = {IEEE},
+  location = {Salt Lake City, UT},
+  doi = {10.1109/CVPR.2018.00296},
+  url = {https://ieeexplore.ieee.org/document/8578394/},
+  urldate = {2025-01-20},
+  abstract = {Monocular depth estimation using learning-based approaches has become promising in recent years. However, most monocular depth estimators either need to rely on large quantities of ground truth depth data, which is extremely expensive and difficult to obtain, or predict disparity as an intermediary step using a secondary supervisory signal leading to blurring and other artefacts. Training a depth estimation model using pixel-perfect synthetic data can resolve most of these issues but introduces the problem of domain bias. This is the inability to apply a model trained on synthetic data to real-world scenarios. With advances in image style transfer and its connections with domain adaptation (Maximum Mean Discrepancy), we take advantage of style transfer and adversarial training to predict pixel perfect depth from a single real-world color image based on training over a large corpus of synthetic environment data. Experimental results indicate the efficacy of our approach compared to contemporary state-of-the-art techniques.},
+  eventtitle = {2018 {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
+  isbn = {978-1-5386-6420-9},
+  langid = {english},
+  keywords = {real-time-mde}
+}
